Fixed transition issue causing modals not to be visible

--- a/stylesheets/_layout.tabs.scss
+++ b/stylesheets/_layout.tabs.scss
@@ -7,14 +7,14 @@
 
 .inner-wrapper {
     -webkit-backface-visibility: hidden;
-    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transform: none;
     -webkit-transition: -webkit-transform 500ms ease;
     backface-visibility: hidden;
     display: table;
     height: 100%;
     left: 0;
     position: relative;
-    transform: translate3d(0, 0, 0);
+    transform: none;
     transition: transform 500ms ease;
     width: 100%;
 
@@ -23,11 +23,9 @@
     }
 
     @include respond-min($screen-desktop) {
-        -webkit-transform: none;
         display: table-row;
         left: auto;
         position: static;
-        transform: none;
     }
 }
 
